feature: Add tables to README.md

--- a/notebooks/Collaborative_Filtering.ipynb
+++ b/notebooks/Collaborative_Filtering.ipynb
@@ -35,6 +35,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Requirement already satisfied: tabulate in /anaconda3/lib/python3.7/site-packages (0.8.7)\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "! pip install tabulate\n",
+    "from tabulate import tabulate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "   user_id  movie_id  rating   timestamp                 date  month_1  \\\n",
       "0        1     68646      10  1381620027  2013-10-12 23:20:27        0   \n",
       "1        1    113277      10  1379466669  2013-09-18 01:11:09        0   \n",
@@ -42,12 +60,12 @@
       "3        2    454876       8  1394818630  2014-03-14 17:37:10        0   \n",
       "4        2    790636       7  1389963947  2014-01-17 13:05:47        0   \n",
       "\n",
-      "   month_2  month_3  month_4  month_5    ...      month_9  month_10  month_11  \\\n",
-      "0        0        0        0        0    ...            0         1         0   \n",
-      "1        0        0        0        0    ...            0         0         0   \n",
-      "2        0        0        0        0    ...            0         1         0   \n",
-      "3        0        0        0        0    ...            0         0         0   \n",
-      "4        0        0        0        0    ...            0         0         0   \n",
+      "   month_2  month_3  month_4  month_5  ...  month_9  month_10  month_11  \\\n",
+      "0        0        0        0        0  ...        0         1         0   \n",
+      "1        0        0        0        0  ...        0         0         0   \n",
+      "2        0        0        0        0  ...        0         1         0   \n",
+      "3        0        0        0        0  ...        0         0         0   \n",
+      "4        0        0        0        0  ...        0         0         0   \n",
       "\n",
       "   month_12  year_2013  year_2014  year_2015  year_2016  year_2017  year_2018  \n",
       "0         0          1          0          0          0          0          0  \n",
@@ -147,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +238,7 @@
        "4        2    790636       7"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,6 +246,29 @@
    "source": [
     "user_items = reviews[['user_id', 'movie_id', 'rating']]\n",
     "user_items.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|    |   user_id |   movie_id |   rating |\n",
+      "|---:|----------:|-----------:|---------:|\n",
+      "|  0 |         1 |      68646 |       10 |\n",
+      "|  1 |         1 |     113277 |       10 |\n",
+      "|  2 |         2 |     422720 |        8 |\n",
+      "|  3 |         2 |     454876 |        8 |\n",
+      "|  4 |         2 |     790636 |        7 |\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tabulate(user_items.head(), tablefmt=\"pipe\", headers=\"keys\"))"
    ]
   },
   {
@@ -247,12 +288,250 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create user-by-item matrix\n",
     "user_by_movie = user_items.groupby(['user_id', 'movie_id'])['rating'].max().unstack()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>movie_id</th>\n",
+       "      <th>8</th>\n",
+       "      <th>10</th>\n",
+       "      <th>12</th>\n",
+       "      <th>25</th>\n",
+       "      <th>91</th>\n",
+       "      <th>417</th>\n",
+       "      <th>439</th>\n",
+       "      <th>443</th>\n",
+       "      <th>628</th>\n",
+       "      <th>833</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>user_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "movie_id  8    10   12   25   91   417  439  443  628  833\n",
+       "user_id                                                   \n",
+       "1         NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN\n",
+       "2         NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN\n",
+       "3         NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN\n",
+       "4         NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN\n",
+       "5         NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN\n",
+       "6         NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN\n",
+       "7         NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN\n",
+       "8         NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN\n",
+       "9         NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN\n",
+       "10        NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user_by_movie.iloc[:10,:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|   user_id |   8 |   10 |   12 |   25 |   91 |   417 |   439 |   443 |   628 |   833 |\n",
+      "|----------:|----:|-----:|-----:|-----:|-----:|------:|------:|------:|------:|------:|\n",
+      "|         1 | nan |  nan |  nan |  nan |  nan |   nan |   nan |   nan |   nan |   nan |\n",
+      "|         2 | nan |  nan |  nan |  nan |  nan |   nan |   nan |   nan |   nan |   nan |\n",
+      "|         3 | nan |  nan |  nan |  nan |  nan |   nan |   nan |   nan |   nan |   nan |\n",
+      "|         4 | nan |  nan |  nan |  nan |  nan |   nan |   nan |   nan |   nan |   nan |\n",
+      "|         5 | nan |  nan |  nan |  nan |  nan |   nan |   nan |   nan |   nan |   nan |\n",
+      "|         6 | nan |  nan |  nan |  nan |  nan |   nan |   nan |   nan |   nan |   nan |\n",
+      "|         7 | nan |  nan |  nan |  nan |  nan |   nan |   nan |   nan |   nan |   nan |\n",
+      "|         8 | nan |  nan |  nan |  nan |  nan |   nan |   nan |   nan |   nan |   nan |\n",
+      "|         9 | nan |  nan |  nan |  nan |  nan |   nan |   nan |   nan |   nan |   nan |\n",
+      "|        10 | nan |  nan |  nan |  nan |  nan |   nan |   nan |   nan |   nan |   nan |\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tabulate(user_by_movie.iloc[:10,:10], tablefmt=\"pipe\", headers=\"keys\"))"
    ]
   },
   {
@@ -591,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1005,6 +1284,7 @@
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -1020,7 +1300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
